--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,12 @@
   <body>
     <div class="section">
 
-      <div class="title">
-        <h1><img src="./logo.png" alt="" align="middle"> Downloader</h1>
+      <div class="content">
+        <h1><img src="./logo.png" alt="" align="middle">Downloader</h1>
         <hr>
+        <div class="container">
+          <input type="text" name="" value="">
+        </div>
       </div>
 
       <div class="video-container">
